check.log
    Checking MobileClient v0.1.0 (/home/tommy/Desktop/MobileClient)
warning: unused import: `async_recursion::async_recursion`
 --> src/udp_engine.rs:8:5
  |
8 | use async_recursion::async_recursion;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `async_recursion::async_recursion`
 --> src/packets.rs:3:5
  |
3 | use async_recursion::async_recursion;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unnecessary parentheses around assigned value
   --> src/packets.rs:718:30
    |
718 |         let packed_heading = (self.heading & 0xFFF); // padding zero
    |                              ^                    ^
    |
    = note: `#[warn(unused_parens)]` (part of `#[warn(unused)]`) on by default
help: remove these parentheses
    |
718 -         let packed_heading = (self.heading & 0xFFF); // padding zero
718 +         let packed_heading = self.heading & 0xFFF; // padding zero
    |

warning: unused imports: `Arc` and `Mutex`
 --> src/web_ui.rs:2:17
  |
2 | use std::sync::{Arc, Mutex};
  |                 ^^^  ^^^^^

warning: unused import: `ClientZoneEntry`
 --> src/main.rs:9:79
  |
9 | use packets::{LoginAppOp, WorldAppOp, ZoneAppOp, LoginBaseMessage, ZoneEntry, ClientZoneEntry, TitaniumCharInfo, SpawnStruct, PlayerProfi...
  |                                                                               ^^^^^^^^^^^^^^^

warning: unused label
   --> src/main.rs:438:5
    |
438 |     'zone_loop: loop {
    |     ^^^^^^^^^^
    |
    = note: `#[warn(unused_labels)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
  --> src/web_ui.rs:57:9
   |
57 |     let mut send_task = tokio::spawn(async move {
   |         ----^^^^^^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
   --> src/main.rs:473:35
    |
473 |                         spawn_id: state.my_spawn_id.unwrap_or(0),
    |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u16`, found `u32`

warning: unreachable statement
   --> src/main.rs:649:5
    |
438 | /     'zone_loop: loop {
439 | |         let mut buf = [0u8; 8192]; // Larger buffer for PlayerProfile fragments
440 | |         
441 | |         let mut socket_result = None;
...   |
647 | |     }
    | |_____- any code following this expression is unreachable
648 |
649 |       println!("\n🏆 Zone connection complete! Character '{}' is now in-world.", char_name_for_zone);
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unreachable statement
    |
    = note: `#[warn(unreachable_code)]` (part of `#[warn(unused)]`) on by default
    = note: this warning originates in the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0308`.
warning: `MobileClient` (bin "MobileClient") generated 8 warnings
error: could not compile `MobileClient` (bin "MobileClient") due to 1 previous error; 8 warnings emitted
